# hyperbot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml  docker-compose.yml
deploy/: README.md  hyperbot.service
migrations/: 0001_init.sql
src/: config.rs  lib.rs  main.rs  risk.rs  telemetry.rs
src/bot/: mod.rs
src/exchange/: hyperliquid.rs  mock.rs  mod.rs
src/grid/: mod.rs
src/store/: mod.rs
tests/: grid_flow.rs
